[tool.poetry]
name = "mlable-torch"
version = "0.2.1"
description = "PyTorch libs: layers, blocks, optimizers, etc."
authors = ["apehex <17317183+apehex@users.noreply.github.com>"]
readme = ".github/README.md"
packages = [{include = "mlable"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
torch = ">=2.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
