[project]
name = "mlable-torch"
version = "0.3.1"
description = "PyTorch libs: layers, blocks, optimizers, etc."
authors = [{ name = "apehex", email = "17317183+apehex@users.noreply.github.com" }]
readme = ".github/README.md"
license = "AGPL-3.0"
license-files = [".github/LICENSE.md"]
requires-python = ">=3.10, <3.14"
dependencies = [
    "numpy>=2.0",
    "torch>=2.9",]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlable"]

[tool.hatch.build.targets.sdist]
include = ["src/mlable", "pyproject.toml", ".github/README.md", ".github/LICENSE.md"]